@@ -1,5 +1,4 @@
-
-R version 2.5.0 alpha (2007-04-05 r41057)
+R version 2.6.0 Under development (unstable) (2007-04-16 r41175)
 Copyright (C) 2007 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -611,6 +610,91 @@ Achieved convergence tolerance: 7.45e-07
 > ## failed to find n in 2.2.x
 > ## found wrong n in 2.3.x
 > ## finally worked in 2.4.0
+> 
+> 
+> ## list 'start'
+> getExpmat <- function(theta, t)
++ {
++         conc <- matrix(nrow = length(t), ncol = length(theta))
++         for(i in 1:length(theta)) conc[, i] <- exp(-theta[i] * t)
++         conc
++ }
+> 
+> expsum <- as.vector(getExpmat(c(.05,.005), 1:100) %*% c(1,1))
+> expsumNoisy <- expsum + max(expsum) *.001 * rnorm(100)
+> expsum.df <-data.frame(expsumNoisy)
+> 
+> ## estimate decay rates, amplitudes with default Gauss-Newton
+> summary (nls(expsumNoisy ~ getExpmat(k, 1:100) %*% sp, expsum.df,
++              start = list(k = c(.6,.02), sp = c(1,2)), trace=TRUE,
++              control=nls.control(maxiter=20, warnOnly =  TRUE)))
+4.1877 :  0.60 0.02 1.00 2.00 
+1.2548 :  0.130593 0.015089 0.369703 1.765142 
+0.9044 :  0.065379 0.013025 0.475232 1.606069 
+0.62512 :  0.0367784 0.0083939 0.8737859 1.1610935 
+0.12386 :  0.0544411 0.0053965 0.8911517 1.1061639 
+0.0011303 :  0.0495934 0.0050672 0.9955744 1.0048301 
+0.00040476 :  0.0499835 0.0049893 1.0016831 0.9990209 
+0.00040476 :  0.0499817 0.0049891 1.0017021 0.9990082 
+
+Formula: expsumNoisy ~ getExpmat(k, 1:100) %*% sp
+
+Parameters:
+    Estimate Std. Error t value Pr(>|t|)    
+k1  5.00e-02   3.07e-04   162.5   <2e-16 ***
+k2  4.99e-03   5.38e-05    92.8   <2e-16 ***
+sp1 1.00e+00   4.47e-03   224.0   <2e-16 ***
+sp2 9.99e-01   5.00e-03   199.8   <2e-16 ***
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
+
+Residual standard error: 0.00205 on 96 degrees of freedom
+
+Number of iterations to convergence: 7 
+Achieved convergence tolerance: 1.98e-06 
+
+> 
+> ## didn't work with port in 2.4.1
+> summary (nls(expsumNoisy ~ getExpmat(k, 1:100) %*% sp, expsum.df,
++              start = list(k = c(.6,.02), sp = c(1,2)), trace=TRUE,
++              algorithm = "port",
++              control = nls.control(maxiter=20, warnOnly =  TRUE)))
+  0:     2.0938481: 0.600000 0.0200000  1.00000  2.00000
+  1:     1.2511678: 0.628077 0.0175988 0.978318  1.97834
+  2:    0.44756512: 0.688974 0.0142130 0.910254  1.81989
+  3:    0.35549889: 0.426065 0.0135050 0.137545  1.79914
+  4:    0.28700545: 0.524563 0.0120362 0.303632  1.71681
+  5:    0.22412410: 0.316519 0.0123601 0.454951  1.71010
+  6:    0.21561681: 0.273615 0.0123674 0.433670  1.70578
+  7:    0.19899082: 0.208162 0.0123283 0.399634  1.69245
+  8:    0.15606282: 0.107995 0.0115973 0.411593  1.61699
+  9:   0.064914798: 0.118908 0.0102952 0.559941  1.49931
+ 10:   0.050771709: 0.108243 0.00986507 0.592139  1.46578
+ 11:   0.032263218: 0.0861068 0.00913014 0.648374  1.39455
+ 12:   0.015052676: 0.0711500 0.00806384 0.741386  1.28977
+ 13:  0.0049929467: 0.0617087 0.00694721 0.838818  1.18249
+ 14:  0.0015107035: 0.0534249 0.00581884 0.933685  1.07406
+ 15: 0.00025358096: 0.0497422 0.00502207  1.00031  1.00016
+ 16: 0.00020237847: 0.0499817 0.00498915  1.00169 0.999014
+ 17: 0.00020237800: 0.0499817 0.00498914  1.00170 0.999008
+ 18: 0.00020237800: 0.0499817 0.00498914  1.00170 0.999008
+
+Formula: expsumNoisy ~ getExpmat(k, 1:100) %*% sp
+
+Parameters:
+    Estimate Std. Error t value Pr(>|t|)    
+k1  5.00e-02   3.07e-04   162.5   <2e-16 ***
+k2  4.99e-03   5.38e-05    92.8   <2e-16 ***
+sp1 1.00e+00   4.47e-03   224.0   <2e-16 ***
+sp2 9.99e-01   5.00e-03   199.8   <2e-16 ***
+---
+Signif. codes:  0 '***' 0.001 '**' 0.01 '*' 0.05 '.' 0.1 ' ' 1 
+
+Residual standard error: 0.00205 on 96 degrees of freedom
+
+Algorithm "port", convergence message: both X-convergence and relative convergence (5) 
+
+> 
 > 
 > cat('Time elapsed: ', proc.time() - .proctime00,'\n')
 Time elapsed:  7.543 0.045 7.633 0 0 
